--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,16 @@
 
   body {
     @apply bg-white text-gray-900 font-sans antialiased;
+    max-width: 100vw;
   }
 
   html {
     @apply scroll-smooth;
+    max-width: 100vw;
+  }
+
+  section {
+    max-width: 100vw;
   }
 }
 
